--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -14,6 +14,8 @@
         android:transitionName="tvLogo"
         android:text="Время\nготовить"
         android:textColor="@color/black"
+        android:lineSpacingExtra="0sp"
+        android:lineSpacingMultiplier="0.75"
         android:layout_marginStart="20dp"
         android:layout_marginBottom="26dp"
         android:textSize="90sp"
