--- a/app/src/main/res/layout/item_receipt.xml
+++ b/app/src/main/res/layout/item_receipt.xml
@@ -21,24 +21,24 @@
         android:layout_height="0dp"
         android:layout_marginStart="134dp"
         android:maxLines="3"
+        android:text="Французскиe круасаны с шоколадным соусом"
         android:textSize="28sp"
         app:layout_constraintBottom_toTopOf="@+id/btnCheck"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ivDish"
-        app:layout_constraintTop_toTopOf="parent"
-        android:text="Французскиe круасаны с шоколадным соусом" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnCheck"
         android:layout_width="0dp"
         android:layout_height="40dp"
-        android:backgroundTint="@color/red_button"
         android:layout_marginEnd="30dp"
+        android:backgroundTint="@color/red_button"
+        android:fontFamily="@font/montserrat_alternates"
         android:text="Посмотрим"
-        android:textSize="16sp"
         android:textAllCaps="false"
         android:textColor="@color/white"
-        android:fontFamily="@font/montserrat_alternates"
+        android:textSize="16sp"
         app:cornerRadius="18dp"
         app:layout_constraintBottom_toBottomOf="@+id/ivDish"
         app:layout_constraintEnd_toStartOf="@+id/ivFavourite"
@@ -52,5 +52,27 @@
         app:layout_constraintBottom_toBottomOf="@+id/btnCheck"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvName" />
+
+    <com.google.android.material.chip.ChipGroup
+        android:id="@+id/chip_group"
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
+        app:chipSpacingVertical="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ivDish">
+
+        <com.google.android.material.chip.Chip
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="Простой"
+            android:backgroundTint="@color/red_pastel_light"
+            android:clickable="false"
+            android:textSize="14sp"
+            android:fontFamily="@font/montserrat_alternates"
+            android:paddingVertical="4dp"
+            app:chipCornerRadius="12dp"
+            app:chipStrokeWidth="0dp" />
+
+    </com.google.android.material.chip.ChipGroup>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
