--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="brown">#B15124</color>
     <color name="black">#212121</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray">#82889E</color>
 </resources>
