--- a/app/src/main/res/layout/fragment_search_by_tag.xml
+++ b/app/src/main/res/layout/fragment_search_by_tag.xml
@@ -32,13 +32,15 @@
             android:layout_height="54dp"
             app:chipSpacingVertical="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ivDish">
+            app:layout_constraintTop_toBottomOf="@+id/ivDish"
+            app:singleSelection="true">
 
             <com.google.android.material.chip.Chip
+                android:id="@+id/easy"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:backgroundTint="@color/red_pastel_light"
-                android:clickable="false"
+                android:checkable="true"
                 android:fontFamily="@font/montserrat_alternates_medium"
                 android:paddingVertical="4dp"
                 android:text="Простой"
@@ -47,10 +49,11 @@
                 app:chipStrokeWidth="0dp" />
 
             <com.google.android.material.chip.Chip
+                android:id="@+id/medium"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:backgroundTint="@color/red_pastel_light"
-                android:clickable="false"
+                android:checkable="true"
                 android:fontFamily="@font/montserrat_alternates_medium"
                 android:paddingVertical="4dp"
                 android:text="Продвинутый"
@@ -59,10 +62,11 @@
                 app:chipStrokeWidth="0dp" />
 
             <com.google.android.material.chip.Chip
+                android:id="@+id/hard"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:backgroundTint="@color/red_pastel_light"
-                android:clickable="false"
+                android:checkable="true"
                 android:fontFamily="@font/montserrat_alternates_medium"
                 android:paddingVertical="4dp"
                 android:text="Сложный"
@@ -85,83 +89,90 @@
             android:layout_height="wrap_content"
             app:chipSpacingVertical="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ivDish">
+            app:layout_constraintTop_toBottomOf="@+id/ivDish"
+            app:singleSelection="true">
 
             <com.google.android.material.chip.Chip
+                android:id="@+id/breakfast"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:backgroundTint="@color/brown"
-                android:clickable="false"
+                android:checkable="true"
                 android:fontFamily="@font/montserrat_alternates_medium"
                 android:paddingVertical="4dp"
                 android:text="Завтрак"
-                android:textSize="14sp"
                 android:textColor="@color/white"
+                android:textSize="14sp"
                 app:chipCornerRadius="100dp"
                 app:chipStrokeWidth="0dp" />
 
             <com.google.android.material.chip.Chip
+                android:id="@+id/soup"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:backgroundTint="@color/brown"
-                android:clickable="false"
+                android:checkable="true"
                 android:fontFamily="@font/montserrat_alternates_medium"
                 android:paddingVertical="4dp"
                 android:text="Суп"
-                android:textSize="14sp"
                 android:textColor="@color/white"
+                android:textSize="14sp"
                 app:chipCornerRadius="100dp"
                 app:chipStrokeWidth="0dp" />
 
             <com.google.android.material.chip.Chip
+                android:id="@+id/base"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:backgroundTint="@color/brown"
-                android:clickable="false"
+                android:checkable="true"
                 android:fontFamily="@font/montserrat_alternates_medium"
                 android:paddingVertical="4dp"
                 android:text="Основное блюдо"
-                android:textSize="14sp"
                 android:textColor="@color/white"
+                android:textSize="14sp"
                 app:chipCornerRadius="100dp"
                 app:chipStrokeWidth="0dp" />
 
             <com.google.android.material.chip.Chip
+                android:id="@+id/snack"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:backgroundTint="@color/brown"
-                android:clickable="false"
+                android:checkable="true"
                 android:fontFamily="@font/montserrat_alternates_medium"
                 android:paddingVertical="4dp"
                 android:text="Закуска"
-                android:textSize="14sp"
                 android:textColor="@color/white"
+                android:textSize="14sp"
                 app:chipCornerRadius="100dp"
                 app:chipStrokeWidth="0dp" />
 
             <com.google.android.material.chip.Chip
+                android:id="@+id/drinks"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:backgroundTint="@color/brown"
-                android:clickable="false"
+                android:checkable="true"
                 android:fontFamily="@font/montserrat_alternates_medium"
                 android:paddingVertical="4dp"
                 android:text="Напитки"
-                android:textSize="14sp"
                 android:textColor="@color/white"
+                android:textSize="14sp"
                 app:chipCornerRadius="100dp"
                 app:chipStrokeWidth="0dp" />
 
             <com.google.android.material.chip.Chip
+                android:id="@+id/desert"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:backgroundTint="@color/brown"
-                android:clickable="false"
+                android:checkable="true"
                 android:fontFamily="@font/montserrat_alternates_medium"
                 android:paddingVertical="4dp"
                 android:text="Десерт"
-                android:textSize="14sp"
                 android:textColor="@color/white"
+                android:textSize="14sp"
                 app:chipCornerRadius="100dp"
                 app:chipStrokeWidth="0dp" />
 
@@ -180,13 +191,15 @@
             android:layout_height="wrap_content"
             app:chipSpacingVertical="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ivDish">
+            app:layout_constraintTop_toBottomOf="@+id/ivDish"
+            app:singleSelection="true">
 
             <com.google.android.material.chip.Chip
+                android:id="@+id/fast"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:backgroundTint="@color/red_dark"
-                android:clickable="false"
+                android:checkable="true"
                 android:fontFamily="@font/montserrat_alternates_medium"
                 android:paddingVertical="4dp"
                 android:text="За 30 минут"
@@ -195,10 +208,11 @@
                 app:chipStrokeWidth="0dp" />
 
             <com.google.android.material.chip.Chip
+                android:id="@+id/middle"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:backgroundTint="@color/red_dark"
-                android:clickable="false"
+                android:checkable="true"
                 android:fontFamily="@font/montserrat_alternates_medium"
                 android:paddingVertical="4dp"
                 android:text="За 1 час"
@@ -207,10 +221,11 @@
                 app:chipStrokeWidth="0dp" />
 
             <com.google.android.material.chip.Chip
+                android:id="@+id/middle_plus"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:backgroundTint="@color/red_dark"
-                android:clickable="false"
+                android:checkable="true"
                 android:fontFamily="@font/montserrat_alternates_medium"
                 android:paddingVertical="4dp"
                 android:text="За 1.5 часа"
@@ -219,10 +234,11 @@
                 app:chipStrokeWidth="0dp" />
 
             <com.google.android.material.chip.Chip
+                android:id="@+id/longest"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:backgroundTint="@color/red_dark"
-                android:clickable="false"
+                android:checkable="true"
                 android:fontFamily="@font/montserrat_alternates_medium"
                 android:paddingVertical="4dp"
                 android:text="Более полутора часов"
@@ -235,9 +251,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="28dp"
             android:text="Рецепты"
-            android:textSize="45dp"
-            android:layout_marginTop="28dp"/>
+            android:textSize="45dp" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvReceipts"
