--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -22,4 +22,10 @@
         <!-- Animation -->
         <item name="android:windowActivityTransitions">true</item>
     </style>
+
+    <style name="TabText" parent="TextAppearance.AppCompat">
+        <item name="android:fontFamily">@font/amatic_sc_bold</item>
+        <item name="textAllCaps">false</item>
+        <item name="android:textSize">24sp</item>
+    </style>
 </resources>
