--- a/app/src/main/res/layout/item_receipt.xml
+++ b/app/src/main/res/layout/item_receipt.xml
@@ -5,21 +5,26 @@
     android:layout_height="wrap_content"
     android:paddingBottom="20dp">
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"/>
+
     <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/ivDish"
         android:layout_width="128dp"
         android:layout_height="128dp"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_dish_2"
+        android:adjustViewBounds="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:riv_corner_radius="10dp" />
 
     <TextView
         android:id="@+id/tvName"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="134dp"
+        android:layout_marginStart="4dp"
         android:maxLines="3"
         android:text="Французскиe круасаны с шоколадным соусом"
         android:textSize="28sp"
@@ -40,18 +45,19 @@
         android:textColor="@color/white"
         android:textSize="16sp"
         app:cornerRadius="18dp"
+        android:layout_marginStart="4dp"
         app:layout_constraintBottom_toBottomOf="@+id/ivDish"
         app:layout_constraintEnd_toStartOf="@+id/ivFavourite"
-        app:layout_constraintStart_toStartOf="@+id/tvName" />
+        app:layout_constraintStart_toEndOf="@+id/ivDish" />
 
     <ImageView
         android:id="@+id/ivFavourite"
-        android:layout_width="0dp"
+        android:layout_width="40dp"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_heart"
         app:layout_constraintBottom_toBottomOf="@+id/btnCheck"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvName" />
+        app:layout_constraintTop_toTopOf="@+id/btnCheck" />
 
     <com.google.android.material.chip.ChipGroup
         android:id="@+id/chip_group"
