--- a/app/src/main/res/layout/fragment_receipt.xml
+++ b/app/src/main/res/layout/fragment_receipt.xml
@@ -33,8 +33,9 @@
         android:id="@+id/tvRating"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="-/10"
-        android:textSize="24sp"
+        android:text="@string/template_rating"
+        android:textSize="18sp"
+        android:fontFamily="@font/montserrat_alternates_medium"
         android:layout_marginStart="4dp"
         app:layout_constraintEnd_toStartOf="@+id/ivTime"
         app:layout_constraintHorizontal_bias="0.5"
@@ -57,7 +58,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="2 часа"
-        android:textSize="24sp"
+        android:textSize="18sp"
+        android:fontFamily="@font/montserrat_alternates_medium"
         android:layout_marginStart="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
