--- a/app/src/main/res/layout/fragment_main_menu.xml
+++ b/app/src/main/res/layout/fragment_main_menu.xml
@@ -69,12 +69,12 @@
             tools:layout_editor_absoluteX="20dp" />
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnPackages"
+            android:id="@+id/btnRandom"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:backgroundTint="@color/red_pastel_dark"
-            android:text="Мои папки рецептов"
+            android:text="Случайные рецепты"
             android:textSize="35sp"
             app:cornerRadius="18dp"
             app:layout_constraintTop_toBottomOf="@+id/btnFavourite"
@@ -87,7 +87,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginEnd="10dp"
             android:backgroundTint="@color/red_pastel_light"
-            android:text="Поиск по названию"
+            android:text="Все рецепты"
             android:textSize="35sp"
             app:cornerRadius="18dp"
             app:layout_constraintDimensionRatio="1:1"
@@ -95,7 +95,7 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintHorizontal_chainStyle="spread_inside"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btnPackages" />
+            app:layout_constraintTop_toBottomOf="@+id/btnRandom" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnAddRecipe"
@@ -103,7 +103,7 @@
             android:layout_height="0dp"
             android:layout_marginStart="10dp"
             android:backgroundTint="@color/red_pastel_light"
-            android:text="Поиск по тегам"
+            android:text="Добавить свой рецепт"
             android:textSize="35sp"
             app:cornerRadius="18dp"
             app:layout_constraintDimensionRatio="1:1"
@@ -113,7 +113,7 @@
             app:layout_constraintTop_toTopOf="@+id/btnAllRecipes" />
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnTooltips"
+            android:id="@+id/btnRecommendations"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
@@ -124,18 +124,6 @@
             android:textSize="35sp"
             app:cornerRadius="18dp"
             app:layout_constraintTop_toBottomOf="@+id/btnAddRecipe"
-            tools:layout_editor_absoluteX="20dp" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnRandom"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:backgroundTint="@color/red_pastel_dark"
-            android:text="Случайные рецепты"
-            android:textSize="35sp"
-            app:cornerRadius="18dp"
-            app:layout_constraintTop_toBottomOf="@+id/btnTooltips"
             tools:layout_editor_absoluteX="20dp" />
 
 
