--- a/app/src/main/res/layout/fragment_add_receipt.xml
+++ b/app/src/main/res/layout/fragment_add_receipt.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="match_parent">
 
     <EditText
-        android:id="@+id/tvTitle"
+        android:id="@+id/etTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="Пряный тыквенный суп"
         android:layout_marginHorizontal="20dp"
         android:gravity="center"
+        android:hint="Пряный тыквенный суп"
         android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,22 +21,22 @@
         android:id="@+id/ivRating"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_star"
         android:layout_marginTop="9dp"
+        android:src="@drawable/ic_star"
         app:layout_constraintEnd_toStartOf="@+id/tvRating"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
+        app:layout_constraintTop_toBottomOf="@+id/etTitle" />
 
     <TextView
         android:id="@+id/tvRating"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/template_rating"
-        android:textSize="18sp"
-        android:fontFamily="@font/montserrat_alternates_medium"
         android:layout_marginStart="4dp"
+        android:fontFamily="@font/montserrat_alternates_medium"
+        android:text="0/10"
+        android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/ivTime"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/ivRating"
@@ -48,20 +48,20 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="14dp"
         android:src="@drawable/ic_timer"
-        app:layout_constraintEnd_toStartOf="@+id/tvTime"
+        app:layout_constraintEnd_toStartOf="@+id/etTime"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/tvRating"
         app:layout_constraintTop_toTopOf="@+id/ivRating" />
 
     <EditText
-        android:id="@+id/tvTime"
+        android:id="@+id/etTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="2 часа"
-        android:background="@android:color/transparent"
-        android:textSize="18sp"
-        android:fontFamily="@font/montserrat_alternates_medium"
         android:layout_marginStart="4dp"
+        android:background="@android:color/transparent"
+        android:fontFamily="@font/montserrat_alternates_medium"
+        android:hint="2 часа"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/ivTime"
