--- a/app/src/main/res/layout/item_ingridient_middle_add.xml
+++ b/app/src/main/res/layout/item_ingridient_middle_add.xml
@@ -26,7 +26,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/tvTitle"
+        android:id="@+id/etTitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
@@ -36,12 +36,12 @@
         android:textSize="14sp"
         android:background="@android:color/transparent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/tvCount"
+        app:layout_constraintEnd_toStartOf="@+id/etCount"
         app:layout_constraintStart_toEndOf="@+id/view"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/tvCount"
+        android:id="@+id/etCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="1"
