--- a/app/src/main/res/navigation/nav_host_fragment_container.xml
+++ b/app/src/main/res/navigation/nav_host_fragment_container.xml
@@ -33,7 +33,11 @@
         android:id="@+id/addNewFragment"
         android:name="ru.meowtee.timetocook.ui.add.AddNewFragment"
         android:label="AddNewFragment"
-        tools:layout="@layout/fragment_add_recipe"/>
+        tools:layout="@layout/fragment_add_recipe">
+        <action
+            android:id="@+id/action_addNewFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
     <fragment
         android:id="@+id/receiptInfoFragment"
         android:name="ru.meowtee.timetocook.ui.information.ReceiptInfoFragment"
