--- a/app/src/main/res/layout/fragment_search_by_tag.xml
+++ b/app/src/main/res/layout/fragment_search_by_tag.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fillViewport="true">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -29,6 +30,7 @@
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/chip_group_difficult"
             android:layout_width="match_parent"
+            app:selectionRequired="true"
             android:layout_height="54dp"
             app:chipSpacingVertical="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -38,6 +40,7 @@
             <com.google.android.material.chip.Chip
                 android:id="@+id/easy"
                 android:layout_width="wrap_content"
+                style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:layout_height="match_parent"
                 android:backgroundTint="@color/red_pastel_light"
                 android:checkable="true"
@@ -52,6 +55,7 @@
                 android:id="@+id/medium"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:backgroundTint="@color/red_pastel_light"
                 android:checkable="true"
                 android:fontFamily="@font/montserrat_alternates_medium"
@@ -64,6 +68,7 @@
             <com.google.android.material.chip.Chip
                 android:id="@+id/hard"
                 android:layout_width="wrap_content"
+                style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:layout_height="match_parent"
                 android:backgroundTint="@color/red_pastel_light"
                 android:checkable="true"
