--- a/app/src/main/res/navigation/nav_host_fragment_container.xml
+++ b/app/src/main/res/navigation/nav_host_fragment_container.xml
@@ -40,6 +40,10 @@
         <argument
             android:name="receipt"
             app:argType="ru.meowtee.timetocook.data.model.Receipt"/>
+        <argument
+            android:name="isEditable"
+            app:argType="boolean"
+            android:defaultValue="false" />
     </fragment>
     <fragment
         android:id="@+id/receiptInfoFragment"
